tailcall-query-plan/tests/snapshots/execution__PostAndUser_execution_plan.snap
---
source: query_plan/tests/execution.rs
expression: execution_plan
---
Parallel:
    Sequential:
        Resolve(0)
        Resolve(1)
    Resolve(6)
