tailcall-query-plan/tests/snapshots/execution__PostAndUser_operation_plan.snap
---
source: query_plan/tests/execution.rs
expression: operation_plan
---
OperationPlan
    fields:
        post(by 0)
            title
            user(by 1)
                name
        user(by 6)
            username
            email

    selections:
        Resolver(1):
                name

        Resolver(0):
                title

        Resolver(6):
                username
                email
