tailcall-query-plan/tests/snapshots/execution__PostAndUser_output.snap
---
source: query_plan/tests/execution.rs
expression: result
---
{
  "post": {
    "title": "ea molestias quasi exercitationem repellat qui ipsa sit aut",
    "user": {
      "name": "Leanne Graham"
    }
  },
  "user": {
    "username": "Antonette",
    "email": "Shanna@melissa.tv"
  }
}
