tailcall-query-plan/tests/snapshots/execution__Post_execution_plan.snap
---
source: query_plan/tests/execution.rs
expression: execution_plan
---
Sequential:
    Resolve(0)
    Resolve(1)
    Resolve(2)
