tailcall-query-plan/tests/snapshots/execution__Post_output.snap
---
source: query_plan/tests/execution.rs
expression: result
---
{
  "post": {
    "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
    "user": {
      "name": "Leanne Graham",
      "email": "Sincere@april.biz",
      "website": "/users/website/Bret"
    }
  }
}
