tailcall-query-plan/tests/snapshots/execution__PostsComplex_execution_plan.snap
---
source: query_plan/tests/execution.rs
expression: execution_plan
---
Sequential:
    Resolve(3)
    Resolve(4)
    Resolve(5)
