tailcall-query-plan/tests/snapshots/execution__PostsSimple_operation_plan.snap
---
source: query_plan/tests/execution.rs
expression: operation_plan
---
OperationPlan
    fields:
        [posts](by 3)
            title

    selections:
        Resolver(3):
                title
